[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["rizkadiev <rizvan.kadiev.007755@gmail.com>"]
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/r-kadiev/python-project-lvl1"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"